correct spacing

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -912,7 +912,7 @@ form {
 }
 
 .form__submit.form__submit--create-account {
-  padding-bottom: $gu-h-spacing;
+  padding-bottom: $gu-v-spacing;
 }
 
 .marketing-permissions__title, .set-password__title {
